Initial commit: IMDB Movie Database with authentication system

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
 <head>
   <meta charset="utf-8">
-  <title>IMBD</title>
+  <title>IMBD - Film Veritabanı</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="IMBD Film Veritabanı - En iyi filmleri keşfedin ve yönetin">
+  <meta name="keywords" content="film, veritabanı, IMBD, movie database">
 </head>
 <body>
   <app-root></app-root>
