review added movie card fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="/logo.png?v=1">
   <meta name="description" content="IMBD Film Veritabanı - En iyi filmleri keşfedin ve yönetin">
   <meta name="keywords" content="film, veritabanı, IMBD, movie database">
+  <meta name="google-signin-client_id" content="664448925226-k2r9i7uh1etn58fh1q5qacftbobqe41g.apps.googleusercontent.com">
 </head>
 <body>
   <app-root></app-root>
